add CI notification for asakusa satellite refs #840

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 before_script: sh -e /etc/init.d/xvfb start
 script: bundle exec rake travis
+notifications:
+ email: false
+ webhooks: http://dev.codefirst.org/puke_bot_travis.cgi
