Fixed: wercker build failure refs #21

--- a/wercker.yml
+++ b/wercker.yml
@@ -9,7 +9,7 @@ build:
       - script:
           name: echo ruby information
           code: |
-              echo "ruby version $(ruby --version) running!"
+              echo "ruby version $(ruby --version) running"
               echo "from location $(which ruby)"
               echo -p "gem list: $(gem list)"
               find /cache/
