install heroku-toolbelt before deploy

--- a/wercker.yml
+++ b/wercker.yml
@@ -24,7 +24,8 @@ build:
           url: $DASHBOZU_URL
 deploy:
     steps:
-        - heroku-deploy
+        - heroku-deploy:
+            install-toolbelt: true
         - script:
             name: Update database
             code: |
